feat: add employee get_by_id flow base file, restruct for repo
